All basic functionality working.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   </app>
   
   <script src="src/config/youtube.js"></script>
-  <script src="src/data/exampleVideoData.js"></script>
   <script src="src/index.js"></script>
   <script src="src/services/youTube.js"></script>
   <script src="src/components/app.js"></script>
@@ -23,5 +22,7 @@
   <script src="src/components/search.js"></script>
   <script src="src/components/videoListEntry.js"></script>
   <script src="src/components/videoList.js"></script>
+  <script src="src/data/exampleVideoData.js"></script>
+  <script src="spec/data/fakeVideoData.js"></script>
 </body>
 </html>
